Fix bugs with fonts on mobile device

--- a/style.css
+++ b/style.css
@@ -453,10 +453,13 @@ footer .row ul li a {
 
 @media (max-width: 768px) {
     h2.title {
-        font-size: 45px;
-        line-height: 80px;
+        font-size: 45px !important;
+        line-height: 90px;
     }
     .main-block h1 {
-        font-size: 60px;
+        font-size: 60px !important;
+    }
+    .discount-block h3 {
+        font-size: 45px !important;
     }
 }
